[package]
name = "reading_bmp_file"
version = "0.1.0"
authors = ["Suraj Patil <suraj.patil716@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
byteorder = "1.3.4"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
